--- a/Game/ConsoleApplication2/ConsoleApplication2.vcxproj
+++ b/Game/ConsoleApplication2/ConsoleApplication2.vcxproj
@@ -159,6 +159,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Constants.h" />
     <ClInclude Include="CustomTypes.h" />
     <ClInclude Include="EventListener.h" />
     <ClInclude Include="Game.h" />
