--- a/Game/ConsoleApplication2/ConsoleApplication2.vcxproj
+++ b/Game/ConsoleApplication2/ConsoleApplication2.vcxproj
@@ -159,13 +159,14 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AIManager.h" />
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="EventListener.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="InputManager.h" />
-    <ClInclude Include="MovingGameObject.h" />
+    <ClInclude Include="AIGameObject.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="SimpleTypes.h" />
     <ClInclude Include="stdafx.h" />
@@ -173,6 +174,7 @@
     <ClInclude Include="Vector2D.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AIManager.cpp" />
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="ConsoleApplication2.cpp" />
     <ClCompile Include="Constants.cpp" />
