--- a/Game/ConsoleApplication2/ConsoleApplication2.vcxproj.filters
+++ b/Game/ConsoleApplication2/ConsoleApplication2.vcxproj.filters
@@ -58,6 +58,7 @@
     <ClCompile Include="Vector2D.cpp">
       <Filter>Source</Filter>
     </ClCompile>
+    <ClCompile Include="Boid.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Abductor.h">
