Health technically done

--- a/Game/ConsoleApplication2/ConsoleApplication2.vcxproj
+++ b/Game/ConsoleApplication2/ConsoleApplication2.vcxproj
@@ -171,11 +171,13 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="CollisionManager.h" />
     <ClInclude Include="Constants.h" />
+    <ClInclude Include="DamageObject.h" />
     <ClInclude Include="EntityFactory.h" />
     <ClInclude Include="EventListener.h" />
     <ClInclude Include="FireRatePowerupGenerator.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="HealthObject.h" />
     <ClInclude Include="PowerUpTypes.h" />
     <ClInclude Include="HyperJumpGenerator.h" />
     <ClInclude Include="InputManager.h" />
@@ -210,6 +212,7 @@
     <ClCompile Include="FireRatePowerupGenerator.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="HealthObject.cpp" />
     <ClCompile Include="HyperJumpGenerator.cpp" />
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="Meteor.cpp" />
